--- a/exercice2/exercice.html
+++ b/exercice2/exercice.html
@@ -11,7 +11,7 @@
         <li>List item 2</li>
     </ol>
 
-
-    <script src="exercice.js"></script>
+    <script src="js/jquery-3.6.3.min.js"></script>
+    <script src="js/exercice.js"></script>
 </body>
 </html>
